Fix the terrifying overflow fix issue

--- a/css/home.css
+++ b/css/home.css
@@ -144,14 +144,14 @@ a {
   -webkit-padding-start: 0;
 }
 
-.home > header {
+.home > article > header {
   width: 100%;
   height: 100%;
   padding-bottom: 80px;
   overflow-x: hidden;
 }
 
-.home > header ul[aria-label="featured"] {
+.home > article > header ul[aria-label="featured"] {
   width: 200%;
   height: 100%;
   -webkit-animation: slide 30s infinite;
@@ -160,12 +160,12 @@ a {
 }
 
 @media (max-width: 769px) {
-  .home > header ul[aria-label="featured"] {
+  .home > article > header ul[aria-label="featured"] {
     padding-bottom: 56px;
   }
 }
 
-.home > header ul[aria-label="featured"] figure {
+.home > article > header ul[aria-label="featured"] figure {
   margin: 0;
   height: 100%;
   position: relative;
@@ -176,7 +176,7 @@ a {
   z-index: 0;
 }
 
-.home > header ul[aria-label="featured"] img {
+.home > article > header ul[aria-label="featured"] img {
   position: absolute;
   height: auto;
   top: 0;
@@ -190,37 +190,37 @@ a {
   opacity: 0.7;
 }
 
-.home > header ul[aria-label="featured"] figcaption {
+.home > article > header ul[aria-label="featured"] figcaption {
   padding: calc((100vh - 80px) - 75vh) 12.5% 0;
   z-index: 2;
   display: flex;
   flex-direction: column;
 }
 
-.home > header ul[aria-label="featured"] p {
+.home > article > header ul[aria-label="featured"] p {
   margin: 32px auto;
   font-size: 24px;
   line-height: 36px;
 }
 
 @media (min-width: 768px) {
-  .home > header ul[aria-label="featured"] p {
+  .home > article > header ul[aria-label="featured"] p {
     width: 640px;
   }
 }
 
-.home > header ul[aria-label="featured"] h3 {
+.home > article > header ul[aria-label="featured"] h3 {
   font-size: 44px;
   font-family: 'Source Sans Pro', serif;
 }
 
 @media (min-width: 768px) {
-  .home > header ul[aria-label="featured"] h3 {
+  .home > article > header ul[aria-label="featured"] h3 {
     margin: 44px 0;
   }
 }
 
-.home > header ul[aria-label="featured"] [role="button"] {
+.home > article > header ul[aria-label="featured"] [role="button"] {
   padding: 16px 32px;
   display: inline-block;
   margin: 0 auto;
@@ -236,7 +236,7 @@ a {
   border-radius: 5px;
 }
 
-.home > header ul[aria-label="featured"] header {
+.home > article > header ul[aria-label="featured"] header {
   padding: 24px 0;
   border-bottom: solid 1px #9B9B9B;
   position: relative;
@@ -246,13 +246,13 @@ a {
 }
 
 @media (min-width: 768px) {
-  .home > header ul[aria-label="featured"] header {
+  .home > article > header ul[aria-label="featured"] header {
     display: block;
     width: 272px;
   }
 }
 
-.home > header ul[aria-label="featured"] .category {
+.home > article > header ul[aria-label="featured"] .category {
   font-size: 1.6rem;
   line-height: 25px;
   color: #FFFFFF;
@@ -264,7 +264,7 @@ a {
 }
 
 @media (min-width: 768px) {
-  .home > header ul[aria-label="featured"] .category {
+  .home > article > header ul[aria-label="featured"] .category {
     position: absolute;
     left: 0;
     border-bottom: solid 1px #FFFFFF;
@@ -274,17 +274,17 @@ a {
   }
 }
 
-.home > header ul[aria-label="featured"] li {
+.home > article > header ul[aria-label="featured"] li {
   display: inline-block;
   height: 100%;
   width: 50%;
 }
 
-.home > header ul[aria-label="featured"] li:not(:target) article {
+.home > article > header ul[aria-label="featured"] li:not(:target) article {
   display: none;
 }
 
-.home > header ul[aria-label="featured"] li:target {
+.home > article > header ul[aria-label="featured"] li:target {
   animation: slide-up 0.5s ease-in-out 0.25s both;
 }
 
